<?xml version="1.0"?>
<package format="2">
  <name>ros_opcua_impl_python_opcua</name>
  <version>0.5.0</version>
  <description>The ros_opcua_impl_python_opcua package implement binding for python-opcua - Pure Python OPC-UA / IEC 62541 Client and Server library.</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>
  <license>LGPLv3</license>
  <url type="website">http://wiki.ros.org/ros_opcua_impl_python_opcua</url>
  <url type="repository">https://github.com/iirob/ros_opcua_communication</url>
  <url type="bugtracker">https://github.com/iirob/ros_opcua_communication/issues</url>
  <author email="denis.stogl@kit.edu">Denis Štogl</author>
  <author email="ukdrq@student.kit.edu">Daniel Draper</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rospy</depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>